# code_review_ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  dependencies.py  main.py
src/api/: review.py
src/schemas/: request_schema.py
src/services/: code_review.py  github_client.py  openai_client.py
tests/: conftest.py  test_review.py
