[tool.poetry]
name = "review-app"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = "0.115.6"
uvicorn = "0.34.0"
redis = {extras = ["asyncio"], version = "5.2.1"}
aiohttp = "3.11.11"
asyncio = "3.4.3"
openai = "1.59.3"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"